# cakelamp-memex

./: .gitignore  Cargo.toml  README.md  pyproject.toml
benchmarks/: bench_autograd.py  bench_ops.py
crates/cakelamp-core/: Cargo.toml
crates/cakelamp-core/benches/: tensor_ops.rs
crates/cakelamp-core/src/: broadcast.rs  lib.rs  ops.rs  python.rs  storage.rs  tensor.rs
crates/cakelamp-python/: Cargo.toml
crates/cakelamp-python/src/: lib.rs
examples/: train_mnist.py
python/cakelamp/: __init__.py  autograd.py  backend.py  nn.py  ops.py  optim.py  tensor.py
python/cakelamp/autograd/: __init__.py  engine.py  function.py  ops.py  tensor.py
python/cakelamp/data/: __init__.py  mnist.py
python/cakelamp/nn/: __init__.py  activations.py  containers.py  dropout.py  linear.py  loss.py  module.py  parameter.py
python/cakelamp/optim/: __init__.py  adam.py  optimizer.py  sgd.py
python/tests/: test_autograd.py  test_nn.py  test_tensor.py
tests/: mock_tensor.py  test_autograd.py  test_autograd_integration.py  test_integration.py  test_mnist_data.py  test_mnist_training.py  test_nn.py  test_optim.py  test_tensor.py
