[package]
name = "cakelamp-core"
version = "0.1.0"
edition = "2021"
description = "CakeLamp: A lightweight tensor library with f32-only storage"

[dependencies]
rand = "0.8"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[features]
default = []
pyo3 = ["dep:pyo3"]

[lib]
name = "cakelamp_core"
crate-type = ["lib", "cdylib"]

[[bench]]
name = "tensor_ops"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
